# bando

./: .gitignore  AGENTS.md  Cargo.toml  MODULE.bazel
examples/glm/: BUILD.bazel  hello_glm.cc
examples/jolt/: BUILD.bazel  hello_jolt.cc
examples/sdl3/: BUILD.bazel  hello_sdl3.cc
examples/sdl3/hello_3d/: BUILD.bazel  hello_3d.cc
examples/sdl3/hello_3d/assets/: Box.glb  README.md
examples/sdl3/hello_3d/shaders/: hello_3d.frag  hello_3d.frag.spv  hello_3d.vert  hello_3d.vert.spv
examples/spdlog/: BUILD.bazel  hello_spdlog.cc
examples/tinygltf/: BUILD.bazel  hello_tinygltf.cc  tinygltf_impl.cc
src/: main.rs
src/components/: mod.rs  motor_state.rs  thrust_motor.rs
