module(
    name = "bando",
    version = "0.1.0",
)

bazel_dep(name = "rules_cc", version = "0.2.13")
bazel_dep(name = "rules_foreign_cc", version = "0.15.1")

register_toolchains(
    "@rules_foreign_cc//toolchains:preinstalled_cmake_toolchain",
    "@rules_foreign_cc//toolchains:preinstalled_make_toolchain",
    "@rules_foreign_cc//toolchains:preinstalled_pkgconfig_toolchain",
)

http_archive = use_repo_rule(
    "@bazel_tools//tools/build_defs/repo:http.bzl",
    "http_archive",
)

http_archive(
    name = "sdl3_src",
    urls = [
        "https://github.com/libsdl-org/SDL/releases/download/release-3.2.4/SDL3-3.2.4.tar.gz",
    ],
    sha256 = "2938328317301dfbe30176d79c251733aa5e7ec5c436c800b99ed4da7adcb0f0",
    strip_prefix = "SDL3-3.2.4",
    build_file_content = """
filegroup(
    name = \"all\",
    srcs = glob([\"**\"]),
    visibility = [\"//visibility:public\"],
)
""",
)

http_archive(
    name = "spdlog_src",
    urls = [
        "https://github.com/gabime/spdlog/archive/refs/tags/v1.14.1.tar.gz",
    ],
    sha256 = "1586508029a7d0670dfcb2d97575dcdc242d3868a259742b69f100801ab4e16b",
    strip_prefix = "spdlog-1.14.1",
    build_file_content = """
cc_library(
    name = \"spdlog\",
    hdrs = glob([
        \"include/**/*.h\",
        \"include/**/*.hpp\",
        \"include/**/*.inl\",
    ], allow_empty = True),
    defines = [\"SPDLOG_HEADER_ONLY\"],
    includes = [\"include\"],
    visibility = [\"//visibility:public\"],
)
""",
)

http_archive(
    name = "glm_src",
    urls = [
        "https://github.com/g-truc/glm/archive/refs/tags/1.0.1.tar.gz",
    ],
    sha256 = "9f3174561fd26904b23f0db5e560971cbf9b3cbda0b280f04d5c379d03bf234c",
    strip_prefix = "glm-1.0.1",
    build_file_content = """
cc_library(
    name = \"glm\",
    hdrs = glob([\"glm/**/*.h\", \"glm/**/*.hpp\", \"glm/**/*.inl\"]),
    includes = [\".\"],
    visibility = [\"//visibility:public\"],
)
""",
)

http_archive(
    name = "jolt_src",
    urls = [
        "https://github.com/jrouwe/JoltPhysics/archive/refs/tags/v5.3.0.tar.gz",
    ],
    sha256 = "e7f9621e480646c434150e1fbe3a9410f4ec4b04ffe54791e0678326b741b918",
    strip_prefix = "JoltPhysics-5.3.0",
    build_file_content = """
filegroup(
    name = \"all\",
    srcs = glob([\"**\"]),
    visibility = [\"//visibility:public\"],
)
""",
)
