module(
    name = "bando",
    version = "0.1.0",
)

bazel_dep(name = "rules_cc", version = "0.2.13")
bazel_dep(name = "rules_foreign_cc", version = "0.15.1")

register_toolchains(
    "@rules_foreign_cc//toolchains:preinstalled_cmake_toolchain",
    "@rules_foreign_cc//toolchains:preinstalled_make_toolchain",
    "@rules_foreign_cc//toolchains:preinstalled_pkgconfig_toolchain",
)

http_archive = use_repo_rule(
    "@bazel_tools//tools/build_defs/repo:http.bzl",
    "http_archive",
)

http_archive(
    name = "sdl3_src",
    urls = [
        "https://github.com/libsdl-org/SDL/releases/download/release-3.2.4/SDL3-3.2.4.tar.gz",
    ],
    sha256 = "2938328317301dfbe30176d79c251733aa5e7ec5c436c800b99ed4da7adcb0f0",
    strip_prefix = "SDL3-3.2.4",
    build_file_content = """
filegroup(
    name = \"all\",
    srcs = glob([\"**\"]),
    visibility = [\"//visibility:public\"],
)
""",
)

http_archive(
    name = "spdlog_src",
    urls = [
        "https://github.com/gabime/spdlog/archive/refs/tags/v1.14.1.tar.gz",
    ],
    sha256 = "1586508029a7d0670dfcb2d97575dcdc242d3868a259742b69f100801ab4e16b",
    strip_prefix = "spdlog-1.14.1",
    build_file_content = """
cc_library(
    name = \"spdlog\",
    hdrs = glob([
        \"include/**/*.h\",
        \"include/**/*.hpp\",
        \"include/**/*.inl\",
    ], allow_empty = True),
    defines = [\"SPDLOG_HEADER_ONLY\"],
    includes = [\"include\"],
    visibility = [\"//visibility:public\"],
)
""",
)

http_archive(
    name = "glm_src",
    urls = [
        "https://github.com/g-truc/glm/archive/refs/tags/1.0.1.tar.gz",
    ],
    sha256 = "9f3174561fd26904b23f0db5e560971cbf9b3cbda0b280f04d5c379d03bf234c",
    strip_prefix = "glm-1.0.1",
    build_file_content = """
cc_library(
    name = \"glm\",
    hdrs = glob([\"glm/**/*.h\", \"glm/**/*.hpp\", \"glm/**/*.inl\"]),
    includes = [\".\"],
    visibility = [\"//visibility:public\"],
)
""",
)

http_archive(
    name = "jolt_src",
    urls = [
        "https://github.com/jrouwe/JoltPhysics/archive/refs/tags/v5.3.0.tar.gz",
    ],
    sha256 = "e7f9621e480646c434150e1fbe3a9410f4ec4b04ffe54791e0678326b741b918",
    strip_prefix = "JoltPhysics-5.3.0",
    build_file_content = """
filegroup(
    name = \"all\",
    srcs = glob([\"**\"]),
    visibility = [\"//visibility:public\"],
)
""",
)

http_archive(
    name = "tinygltf_src",
    urls = [
        "https://github.com/syoyo/tinygltf/archive/refs/tags/v2.9.7.tar.gz",
    ],
    sha256 = "9d31cf7f22e81febaf1ad587d7722582c154f7d9125673ee46c0c594765e8f35",
    strip_prefix = "tinygltf-2.9.7",
    build_file_content = """
cc_library(
    name = \"tinygltf_headers\",
    hdrs = [\"tiny_gltf.h\"],
    includes = [\".\"],
    visibility = [\"//visibility:public\"],
)
""",
)

http_archive(
    name = "nlohmann_json",
    urls = [
        "https://github.com/nlohmann/json/archive/refs/tags/v3.11.3.tar.gz",
    ],
    sha256 = "0d8ef5af7f9794e3263480193c491549b2ba6cc74bb018906202ada498a79406",
    strip_prefix = "json-3.11.3",
    build_file_content = """
cc_library(
    name = \"json\",
    hdrs = glob([\"include/nlohmann/**/*.hpp\"]),
    includes = [\"include\"],
    visibility = [\"//visibility:public\"],
)
""",
)

http_archive(
    name = "stb_src",
    urls = [
        "https://github.com/nothings/stb/archive/refs/heads/master.tar.gz",
    ],
    sha256 = "aa1cd65973cf814b11e5823889cb10650cf25c1badf11a80bbbc23e0c32622ee",
    strip_prefix = "stb-master",
    build_file_content = """
cc_library(
    name = \"stb_headers\",
    hdrs = [\"stb_image.h\", \"stb_image_write.h\"],
    includes = [\".\"],
    visibility = [\"//visibility:public\"],
)
""",
)
